--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,21 @@
-torch==2.0.1
-torchvision==0.15.2
 diffusers==0.25.0
+torch==2.1.0
+torchvision==0.16.0
 transformers==4.43.3
-gradio>=4.0.0
 opencv-python
-httpx==0.23.3
-timm
 einops
 ftfy
+basicsr
 facexlib
 insightface
-onnxruntime
+onnx==1.13.1
 onnxruntime-gpu
+onnxruntime==1.14.1
 accelerate
+huggingface-hub
+timm
 SentencePiece
+fire
 safetensors
+numpy==1.24.1
 torchsde
